--- a/WalletWasabi.Fluent/CrashReport/CrashReportApp.axaml
+++ b/WalletWasabi.Fluent/CrashReport/CrashReportApp.axaml
@@ -12,6 +12,7 @@
     <ResourceDictionary>
       <ResourceDictionary.MergedDictionaries>
         <MergeResourceInclude Source="avares://WalletWasabi.Fluent/Styles/Themes/ThemeVariants.axaml" />
+        <MergeResourceInclude Source="avares://WalletWasabi.Fluent/Styles/Themes/Base.axaml" />
         <MergeResourceInclude Source="avares://WalletWasabi.Fluent/Controls/ContentArea.axaml" />
       </ResourceDictionary.MergedDictionaries>
     </ResourceDictionary>
@@ -22,7 +23,6 @@
     <FluentTheme />
     <StyleInclude Source="avares://Avalonia.Controls.TreeDataGrid/Themes/Fluent.axaml" />
     <StyleInclude Source="avares://Avalonia.Xaml.Interactions.Draggable/Styles.axaml" />
-    <StyleInclude Source="avares://WalletWasabi.Fluent/Styles/Themes/Base.axaml" />
 
     <StyleInclude Source="avares://WalletWasabi.Fluent/Icons/Icons.axaml" />
     <StyleInclude Source="avares://WalletWasabi.Fluent/Styles/Styles.axaml" />
