Use DynamicResource as needed for theme variants to work

--- a/WalletWasabi.Fluent/Controls/Dialog.axaml
+++ b/WalletWasabi.Fluent/Controls/Dialog.axaml
@@ -107,7 +107,7 @@
   <Style Selector="c|Dialog[FullScreenEnabled=True] /template/ Border#PART_Border">
     <Setter Property="Margin" Value="0 30 0 0" />
     <Setter Property="BorderThickness" Value="0" />
-    <Setter Property="BoxShadow" Value="{StaticResource EmptyBoxShadow}" />
+    <Setter Property="BoxShadow" Value="{DynamicResource EmptyBoxShadow}" />
   </Style>
   <Style Selector="c|Dialog[FullScreenEnabled=True] /template/ Panel#PART_DialogHost">
     <Setter Property="Margin" Value="0" />
