--- a/WalletWasabi.Fluent/Controls/PreviewItem.axaml
+++ b/WalletWasabi.Fluent/Controls/PreviewItem.axaml
@@ -17,7 +17,7 @@
                     Data="{TemplateBinding Icon}"
                     Opacity="0.5"
                     Margin="0 0 20 0"
-                    Foreground="{StaticResource SystemAccentColor}"
+                    Foreground="{DynamicResource SystemAccentColor}"
                     DockPanel.Dock="Left" IsVisible="{TemplateBinding Icon, Converter={x:Static ObjectConverters.IsNotNull}}" />
           <DockPanel>
             <TextBlock Name="PART_Text" Text="{TemplateBinding Label}" DockPanel.Dock="Top" Margin="0 0 0 5"
