--- a/WalletWasabi.Fluent/Views/CoinJoinProfiles/CoinJoinProfilesView.axaml
+++ b/WalletWasabi.Fluent/Views/CoinJoinProfiles/CoinJoinProfilesView.axaml
@@ -53,8 +53,8 @@
             <Setter Property="Margin" Value="10 5 10 20" />
             <Setter Property="BorderBrush" Value="#14FFFFFF" />
             <Setter Property="BorderThickness" Value="1" />
-            <Setter Property="Background" Value="{StaticResource OptimizePrivacyOptionSelectedColor}" />
-            <Setter Property="BoxShadow" Value="{StaticResource OptimizePrivacyOptionBoxShadow1}" />
+            <Setter Property="Background" Value="{DynamicResource OptimizePrivacyOptionSelectedColor}" />
+            <Setter Property="BoxShadow" Value="{DynamicResource OptimizePrivacyOptionBoxShadow1}" />
           </Style>
 
           <Style Selector="ListBoxItem Border#PART_DecorationBorderHover">
@@ -63,8 +63,8 @@
             <Setter Property="Margin" Value="10 5 10 20" />
             <Setter Property="BorderBrush" Value="#2AFFFFFF" />
             <Setter Property="BorderThickness" Value="1" />
-            <Setter Property="Background" Value="{StaticResource OptimizePrivacyOptionSelectedColor}" />
-            <Setter Property="BoxShadow" Value="{StaticResource OptimizePrivacyOptionBoxShadow2}" />
+            <Setter Property="Background" Value="{DynamicResource OptimizePrivacyOptionSelectedColor}" />
+            <Setter Property="BoxShadow" Value="{DynamicResource OptimizePrivacyOptionBoxShadow2}" />
 
             <Setter Property="Opacity" Value="0" />
           </Style>
