--- a/WalletWasabi.Fluent/Views/Shell/TitleBar.axaml
+++ b/WalletWasabi.Fluent/Views/Shell/TitleBar.axaml
@@ -42,9 +42,9 @@
                   TextElement.FontFamily="{StaticResource WasabiLogoTextFont}"
                   Classes="h7"
                   TextElement.FontWeight="Light" Orientation="Horizontal" ClipToBounds="False">
-        <TextBlock Text="WASABI" Foreground="{StaticResource LogoFixedForegroundColor}" />
-        <TextBlock Text="." Foreground="{StaticResource LogoFixedAccentColor}" />
-        <TextBlock Text="WALLET" Foreground="{StaticResource LogoFixedForegroundColor}" />
+        <TextBlock Text="WASABI" Foreground="{DynamicResource LogoFixedForegroundColor}" />
+        <TextBlock Text="." Foreground="{DynamicResource LogoFixedAccentColor}" />
+        <TextBlock Text="WALLET" Foreground="{DynamicResource LogoFixedForegroundColor}" />
       </StackPanel>
     </DataTemplate>
 
