--- a/WalletWasabi.Fluent/Views/Wallets/Advanced/WalletCoins/Columns/IndicatorsColumnView.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Advanced/WalletCoins/Columns/IndicatorsColumnView.axaml
@@ -42,7 +42,7 @@
     <!-- Banned -->
     <PathIcon IsVisible="{Binding IsBanned}"
               Data="{StaticResource warning_filled}"
-              Foreground="{StaticResource SystemControlErrorTextForegroundBrush}"
+              Foreground="{DynamicResource SystemControlErrorTextForegroundBrush}"
               Height="14"
               ToolTip.Tip="{Binding BannedUntilUtcToolTip}" />
 
