--- a/WalletWasabi.Fluent/Views/Wallets/Home/Tiles/PrivacyRing/PrivacyRingDetailsView.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Home/Tiles/PrivacyRing/PrivacyRingDetailsView.axaml
@@ -30,7 +30,7 @@
       <StackPanel Opacity="0.8" HorizontalAlignment="Center" Classes="balance" x:Name="Balance">
 
         <Border VerticalAlignment="Center" BorderThickness="1" CornerRadius="2"
-                BorderBrush="{StaticResource ButtonForeground}" HorizontalAlignment="Center">
+                BorderBrush="{DynamicResource ButtonForeground}" HorizontalAlignment="Center">
           <TextBlock
             Text="PRIVATE" Classes="bold" Margin="4 2 " VerticalAlignment="Center" HorizontalAlignment="Center" />
         </Border>
