--- a/WalletWasabi.Fluent/Styles/Themes/ThemeVariants.axaml
+++ b/WalletWasabi.Fluent/Styles/Themes/ThemeVariants.axaml
@@ -52,21 +52,21 @@
       <Color x:Key="ActionColorLight2">#FF50C48C</Color>
       <Color x:Key="ActionColorLight3">#FF6ACF9F</Color>
 
-      <SolidColorBrush x:Key="TextControlBorderBrush" Color="{DynamicResource SystemBaseLowColor}" />
-      <SolidColorBrush x:Key="TextControlBorderBrushPointerOver" Color="{DynamicResource SystemBaseMediumLowColor}" />
-      <SolidColorBrush x:Key="TextControlBorderBrushFocused" Color="{DynamicResource SystemAccentColor}" />
+      <SolidColorBrush x:Key="TextControlBorderBrush" Color="{StaticResource  SystemBaseLowColor}" />
+      <SolidColorBrush x:Key="TextControlBorderBrushPointerOver" Color="{StaticResource  SystemBaseMediumLowColor}" />
+      <SolidColorBrush x:Key="TextControlBorderBrushFocused" Color="{StaticResource  SystemAccentColor}" />
 
-      <SolidColorBrush x:Key="TextControlBackground" Color="{DynamicResource SystemChromeMediumColor}" />
-      <SolidColorBrush x:Key="TextControlBackgroundFocused" Color="{DynamicResource SystemChromeWhiteColor}" />
-      <SolidColorBrush x:Key="TextControlBackgroundPointerOver" Color="{DynamicResource SystemChromeMediumColor}" />
+      <SolidColorBrush x:Key="TextControlBackground" Color="{StaticResource  SystemChromeMediumColor}" />
+      <SolidColorBrush x:Key="TextControlBackgroundFocused" Color="{StaticResource SystemChromeWhiteColor}" />
+      <SolidColorBrush x:Key="TextControlBackgroundPointerOver" Color="{StaticResource SystemChromeMediumColor}" />
 
-      <SolidColorBrush x:Key="ComboBoxItemBackground" Color="{DynamicResource SystemChromeMediumColor}" />
-      <SolidColorBrush x:Key="ComboBoxItemBackgroundPressed" Color="{DynamicResource SystemChromeHighColor}" />
-      <SolidColorBrush x:Key="ComboBoxItemBackgroundPointerOver" Color="{DynamicResource SystemChromeLowColor}" />
+      <SolidColorBrush x:Key="ComboBoxItemBackground" Color="{StaticResource SystemChromeMediumColor}" />
+      <SolidColorBrush x:Key="ComboBoxItemBackgroundPressed" Color="{StaticResource SystemChromeHighColor}" />
+      <SolidColorBrush x:Key="ComboBoxItemBackgroundPointerOver" Color="{StaticResource SystemChromeLowColor}" />
 
-      <SolidColorBrush x:Key="ComboBoxBackground" Color="{DynamicResource SystemChromeMediumColor}" />
-      <SolidColorBrush x:Key="ComboBoxBackgroundPressed" Color="{DynamicResource SystemChromeHighColor}" />
-      <SolidColorBrush x:Key="ComboBoxBackgroundPointerOver" Color="{DynamicResource SystemChromeLowColor}" />
+      <SolidColorBrush x:Key="ComboBoxBackground" Color="{StaticResource SystemChromeMediumColor}" />
+      <SolidColorBrush x:Key="ComboBoxBackgroundPressed" Color="{StaticResource SystemChromeHighColor}" />
+      <SolidColorBrush x:Key="ComboBoxBackgroundPointerOver" Color="{StaticResource SystemChromeLowColor}" />
 
       <Color x:Key="TileRegionColor">White</Color>
       <Color x:Key="TileBorderColor">#14000000</Color>
@@ -185,8 +185,8 @@
     <x:String x:Key="LabelsWatermarkText">Person or Company i.e. Alice, Bob, Pizza Inc</x:String>
 
     <SolidColorBrush x:Key="NotificationCardInformationBackgroundBrush" Color="{DynamicResource SystemAccentColor}" />
-    <SolidColorBrush x:Key="TextControlForeground" Color="{DynamicResource SystemBaseHighColor}" />
-    <SolidColorBrush x:Key="TextForegroundColor" Color="{DynamicResource SystemBaseHighColor}" />
+    <SolidColorBrush x:Key="TextControlForeground" Color="{StaticResource SystemBaseHighColor}" />
+    <SolidColorBrush x:Key="TextForegroundColor" Color="{StaticResource SystemBaseHighColor}" />
         <!-- TODO: Fix DataGridRowSelectedUnfocusedBackgroundColor as StaticResource will not work -->
     <StaticResource x:Key="DataGridRowSelectedUnfocusedBackgroundColor"
                     ResourceKey="DataGridRowSelectedBackgroundColor" />
@@ -296,21 +296,21 @@
       <Color x:Key="ActionColorLight3">#FF159148</Color>
       <Color x:Key="ActionColor">#34D286</Color>
 
-      <SolidColorBrush x:Key="TextControlBorderBrush" Color="{DynamicResource SystemBaseLowColor}" />
-      <SolidColorBrush x:Key="TextControlBorderBrushPointerOver" Color="{DynamicResource SystemBaseMediumLowColor}" />
-      <SolidColorBrush x:Key="TextControlBorderBrushFocused" Color="{DynamicResource SystemAccentColor}" />
+      <SolidColorBrush x:Key="TextControlBorderBrush" Color="{StaticResource  SystemBaseLowColor}" />
+      <SolidColorBrush x:Key="TextControlBorderBrushPointerOver" Color="{StaticResource  SystemBaseMediumLowColor}" />
+      <SolidColorBrush x:Key="TextControlBorderBrushFocused" Color="{StaticResource  SystemAccentColor}" />
 
-      <SolidColorBrush x:Key="TextControlBackground" Color="{DynamicResource SystemChromeMediumColor}" />
-      <SolidColorBrush x:Key="TextControlBackgroundFocused" Color="{DynamicResource SystemChromeMediumColor}" />
-      <SolidColorBrush x:Key="TextControlBackgroundPointerOver" Color="{DynamicResource SystemChromeMediumColor}" />
+      <SolidColorBrush x:Key="TextControlBackground" Color="{StaticResource  SystemChromeMediumColor}" />
+      <SolidColorBrush x:Key="TextControlBackgroundFocused" Color="{StaticResource  SystemChromeMediumColor}" />
+      <SolidColorBrush x:Key="TextControlBackgroundPointerOver" Color="{StaticResource  SystemChromeMediumColor}" />
 
-      <SolidColorBrush x:Key="ComboBoxItemBackground" Color="{DynamicResource SystemChromeMediumColor}" />
-      <SolidColorBrush x:Key="ComboBoxItemBackgroundPressed" Color="{DynamicResource SystemChromeHighColor}" />
-      <SolidColorBrush x:Key="ComboBoxItemBackgroundPointerOver" Color="{DynamicResource SystemChromeLowColor}" />
+      <SolidColorBrush x:Key="ComboBoxItemBackground" Color="{StaticResource  SystemChromeMediumColor}" />
+      <SolidColorBrush x:Key="ComboBoxItemBackgroundPressed" Color="{StaticResource  SystemChromeHighColor}" />
+      <SolidColorBrush x:Key="ComboBoxItemBackgroundPointerOver" Color="{StaticResource  SystemChromeLowColor}" />
 
-      <SolidColorBrush x:Key="ComboBoxBackground" Color="{DynamicResource SystemChromeMediumColor}" />
-      <SolidColorBrush x:Key="ComboBoxBackgroundPressed" Color="{DynamicResource SystemChromeHighColor}" />
-      <SolidColorBrush x:Key="ComboBoxBackgroundPointerOver" Color="{DynamicResource SystemChromeLowColor}" />
+      <SolidColorBrush x:Key="ComboBoxBackground" Color="{StaticResource  SystemChromeMediumColor}" />
+      <SolidColorBrush x:Key="ComboBoxBackgroundPressed" Color="{StaticResource  SystemChromeHighColor}" />
+      <SolidColorBrush x:Key="ComboBoxBackgroundPointerOver" Color="{StaticResource  SystemChromeLowColor}" />
 
       <Color x:Key="TileRegionColor">#21252D</Color>
       <Color x:Key="TileBorderColor">#66757575</Color>
@@ -342,6 +342,22 @@
 
       <BoxShadows x:Key="OptimizePrivacyOptionBoxShadow1">0 6 16 0 #22000000</BoxShadows>
       <BoxShadows x:Key="OptimizePrivacyOptionBoxShadow2">0 9 23 0 #4A000000</BoxShadows>
+
+
+
+
+
+      <!-- Base.axaml -->
+
+      <!-- TODO: Add all resource from Default variant that depends on variant resources like SystemBaseHighColor etc... -->
+      <SolidColorBrush x:Key="TextControlForeground" Color="{StaticResource  SystemBaseHighColor}" />
+      <SolidColorBrush x:Key="TextForegroundColor" Color="{StaticResource  SystemBaseHighColor}" />
+
+
+
+
+
+
     </ResourceDictionary>
 
   </ResourceDictionary.ThemeDictionaries>
