--- a/WalletWasabi.Fluent/Views/CoinControl/SelectCoinsDialogView.axaml
+++ b/WalletWasabi.Fluent/Views/CoinControl/SelectCoinsDialogView.axaml
@@ -70,6 +70,8 @@
         <Setter Property="FontSize" Value="15" />
         <Setter Property="Margin" Value="10 0" />
         <Setter Property="HorizontalAlignment" Value="Center" />
+        <Setter Property="Background" Value="Transparent" />
+        <Setter Property="Foreground" Value="{DynamicResource TextForegroundColor}" />
       </Style>
 
       <Style Selector="TreeDataGridExpanderCell">
