--- a/WalletWasabi.Fluent/Controls/Dialog.axaml
+++ b/WalletWasabi.Fluent/Controls/Dialog.axaml
@@ -65,14 +65,14 @@
   </Style>
 
   <Style Selector="c|Dialog:alert /template/ Border#PART_Border">
-    <Setter Property="BoxShadow" Value="0 0 10 10 Red"/>
+    <Setter Property="BoxShadow" Value="{DynamicResource DialogAlertEndBoxShadow}"/>
     <Style.Animations>
       <Animation Duration="0:0:0.5" PlaybackDirection="AlternateReverse" IterationCount="Infinite">
         <KeyFrame Cue="0%">
-          <Setter Property="BoxShadow" Value="0 0 10 0 Red"/>
+          <Setter Property="BoxShadow" Value="{DynamicResource DialogAlertStartBoxShadow}"/>
         </KeyFrame>
         <KeyFrame Cue="100%">
-          <Setter Property="BoxShadow" Value="0 0 10 10 Red"/>
+          <Setter Property="BoxShadow" Value="{DynamicResource DialogAlertEndBoxShadow}"/>
         </KeyFrame>
       </Animation>
     </Style.Animations>
