--- a/WalletWasabi.Fluent/Styles/Themes/Base.axaml
+++ b/WalletWasabi.Fluent/Styles/Themes/Base.axaml
@@ -87,6 +87,8 @@
 
     <x:String x:Key="LabelsWatermarkText">Person or Company i.e. Alice, Bob, Pizza Inc</x:String>
 
+    <x:Double x:Key="LabelMaxWidth">120</x:Double>
+
     <StaticResource x:Key="NotificationCardInformationBackgroundBrush" ResourceKey="SystemAccentColor" />
     <StaticResource x:Key="TextControlForeground" ResourceKey="SystemBaseHighColor" />
     <StaticResource x:Key="TextForegroundColor" ResourceKey="SystemBaseHighColor" />
