--- a/WalletWasabi.Fluent/Controls/LabelsItemsPresenter.axaml
+++ b/WalletWasabi.Fluent/Controls/LabelsItemsPresenter.axaml
@@ -36,7 +36,7 @@
     <Setter Property="HorizontalAlignment" Value="Left" />
     <Setter Property="BorderBrush" Value="{DynamicResource TagsBoxBorderBrush}" />
     <Setter Property="Foreground" Value="{DynamicResource TextControlForeground}" />
-    <Setter Property="MaxLabelWidth" Value="120" />
+    <Setter Property="MaxLabelWidth" Value="{DynamicResource LabelMaxWidth}" />
     <Setter Property="ItemTemplate">
       <DataTemplate>
         <Panel Margin="0 0 4 0">
@@ -68,7 +68,7 @@
                            TextTrimming="CharacterEllipsis"
                            TextWrapping="NoWrap"
                            Foreground="{Binding $parent[c:LabelsItemsPresenter].Foreground}"
-                           MaxWidth="120" />
+                           MaxWidth="{DynamicResource LabelMaxWidth}" />
               </Border>
             </Panel>
           </c:LabelsPanel.EllipsisControl>
