Can also show data context if needed

--- a/WalletWasabi.Fluent/Diagnostics.axaml
+++ b/WalletWasabi.Fluent/Diagnostics.axaml
@@ -30,6 +30,11 @@
             <TextBlock Text="{Binding $parent[Control].Bounds.Width}" Foreground="Red" FontSize="12"/>
             <TextBlock Text=" x " Foreground="Red" FontSize="12"/>
             <TextBlock Text="{Binding $parent[Control].Bounds.Height}" Foreground="Red" FontSize="12"/>
+            <!--
+            <TextBlock Text="(" Foreground="Red" FontSize="12"/>
+            <TextBlock Text="{Binding $parent[Control].DataContext}" Foreground="Red" FontSize="12"/>
+            <TextBlock Text=")" Foreground="Red" FontSize="12"/>
+            -->
           </StackPanel>
           <Border Width="{Binding $parent[Control].Bounds.Width}"
                   Height="{Binding $parent[Control].Bounds.Height}"
